force-app/main/default/objects/Inbound_Blockchain_Transaction__c/Inbound_Blockchain_Transaction__c.object-meta.xml
<CustomObject>
    <description>Inbound Transactions on the Blockchain. From is an Org Wallet. To is an Account Wallet.</description>
    <label>Inbound Blockchain Transaction</label>
    <nameField>
        <displayFormat>IBC-TXN-{00000000}</displayFormat>
        <label>Inbound Blockchain Transaction Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Blockchain Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>