force-app/main/default/objects/Inbound_Blockchain_Transaction__c/fields/Account_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Account_Wallet__c</fullName>
    <description>The external Account Wallet that sent the transaction.</description>
    <label>Account Wallet (From)</label>
    <referenceTo>Account_Wallet__c</referenceTo>
    <relationshipLabel>Inbound Blockchain Transactions</relationshipLabel>
    <relationshipName>Inbound_Blockchain_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>