force-app/main/default/objects/Inbound_Blockchain_Transaction__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <description>Asset (Token) name, symbol, as reported on Blockchain.</description>
    <label>Asset</label>
    <length>20</length>
    <type>Text</type>
</CustomField>