force-app/main/default/objects/Inbound_Blockchain_Transaction__c/fields/Asset_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Asset_Quantity__c</fullName>
    <label>Asset Quantity</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>