force-app/main/default/objects/Inbound_Blockchain_Transaction__c/fields/BlockNum__c.field-meta.xml
<CustomField>
    <fullName>BlockNum__c</fullName>
    <description>The Blockchain Block Number</description>
    <label>Block Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>