force-app/main/default/objects/Inbound_Blockchain_Transaction__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Blockchains</valueSetName>
    </valueSet>
</CustomField>