force-app/main/default/objects/Inbound_Blockchain_Transaction__c/fields/Org_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Org_Wallet__c</fullName>
    <description>Org Wallet that the transaction was sent to.</description>
    <label>Org Wallet (To)</label>
    <referenceTo>Org_Wallet__c</referenceTo>
    <relationshipLabel>Inbound Blockchain Transactions</relationshipLabel>
    <relationshipName>Inbound_Blockchain_Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>