force-app/main/default/objects/Inbound_Blockchain_Transaction__c/fields/System_Notes__c.field-meta.xml
<CustomField>
    <fullName>System_Notes__c</fullName>
    <description>Notes Created by the System</description>
    <label>System Notes</label>
    <type>TextArea</type>
</CustomField>