force-app/main/default/objects/Inbound_Blockchain_Transaction__c/fields/Test_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Test_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Transaction</label>
    <type>Checkbox</type>
</CustomField>