force-app/main/default/objects/Inbound_Blockchain_Transaction__c/fields/Transaction_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Timestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Transaction Timestamp</label>
    <type>DateTime</type>
</CustomField>