force-app/main/default/objects/Inbound_Blockchain_Transaction__c/fields/Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Value__c</fullName>
    <label>Transaction Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>