force-app/main/default/objects/Inbound_Blockchain_Transaction__c/fields/User_Notes__c.field-meta.xml
<CustomField>
    <fullName>User_Notes__c</fullName>
    <label>User Notes</label>
    <type>TextArea</type>
</CustomField>