force-app/main/default/objects/Inbound_Blockchain_Transaction__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Amount (Quantity) of Currency in Transaction on Blockchain. API name maintains compatibility with EVM software.</description>
    <label>Chain Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>