force-app/main/default/objects/Inbound_Blockchain_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Wallet__c</columns>
    <columns>Org_Wallet__c</columns>
    <columns>Network__c</columns>
    <columns>Test_Networks__c</columns>
    <columns>Value__c</columns>
    <columns>Transaction_Timestamp__c</columns>
    <columns>Transaction_Hash__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>