force-app/main/default/objects/Inbound_Blockchain_Transaction__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Account_Wallet__c</columns>
    <columns>Org_Wallet__c</columns>
    <columns>Asset_Token__c</columns>
    <columns>Network__c</columns>
    <columns>Transaction_Value__c</columns>
<!--
    <columns>CURRENCY_ISO_CODE</columns>
-->
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/1/2023 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>